<resources>
  <string name="app_name">CodeTest sabine vogel</string>
  <string name="action_settings">Settings</string>
  <string name="action_add_group">Add Group</string>
  <string name="action_add_contact">Add Contact</string>

  <!-- group-->
  <string name="add_group">Add Group</string>
  <string name="name">name</string>
  <string name="pre_fill"></string>

  <!-- contacts-->
  <string name="add_contact">Add Contact</string>
  <string name="birthday">Birthday :</string>
  <string name="email">Email :</string>
  <string name="phone">Phone :</string>
  <string name="address">Address :</string>

  <string name="hint_groupname">Group Name</string>
  <string name="hint_fname">First Name</string>
  <string name="hint_lname">Last Name</string>
  <string name="hint_email">Email</string>
  <string name="hint_phone">Phone</string>
  <string name="hint_street">Street</string>
  <string name="hint_city">City</string>
  <string name="hint_zipcode">Zipcode</string>
  <string name="hint_birthday">Birthday</string>
  <string name="add">Add</string>

  <!-- dialog-->
  <string name="ok">Ok</string>ь
  <string name="cancel">Cancel</string>

  <!-- tittles-->
  <string name="groups">Groups</string>
  <string name="contacts">Contacts</string>


</resources>
