<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/edit_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">

  <TextView
      android:id="@+id/tv_add_contact"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignEnd="@+id/et_email"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true"
      android:layout_alignRight="@+id/et_email"
      android:text="@string/add_contact"
      android:textAppearance="?android:attr/textAppearanceLarge"/>

  <EditText
      android:layout_marginTop="15dp"
      android:id="@+id/et_fname"
      android:focusable="true"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentLeft="true"
      android:layout_alignParentRight="true"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/tv_add_contact"
      android:hint="@string/hint_fname"/>

  <EditText
      android:layout_marginTop="15dp"
      android:id="@+id/et_lname"
      android:focusable="true"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentLeft="true"
      android:layout_alignParentRight="true"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/et_fname"
      android:hint="@string/hint_lname"/>

  <EditText
      android:id="@+id/et_email"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentLeft="true"
      android:layout_alignParentRight="true"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/et_lname"
      android:hint="@string/hint_email"/>

  <EditText
      android:id="@+id/et_phone"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentLeft="true"
      android:layout_alignParentRight="true"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/et_email"
      android:hint="@string/hint_phone"/>

  <EditText
      android:id="@+id/et_street"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentLeft="true"
      android:layout_alignParentRight="true"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/et_phone"
      android:hint="@string/hint_street"/>
  <EditText
      android:id="@+id/et_city"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentLeft="true"
      android:layout_alignParentRight="true"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/et_street"
      android:hint="@string/hint_city"/>
  <EditText
      android:id="@+id/et_zipcode"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentLeft="true"
      android:layout_alignParentRight="true"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/et_city"
      android:hint="@string/hint_zipcode"/>

  <EditText
      android:id="@+id/et_birthday"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/et_zipcode"
      android:editable="false"
      android:focusable="false"
      android:hint="@string/hint_birthday"
      android:layout_alignRight="@+id/et_email"
      android:layout_alignEnd="@+id/et_email"/>

  <Button
      android:id="@+id/bt_add"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentRight="true"
      android:layout_below="@+id/et_birthday"
      android:text="@string/add_contact"/>
</RelativeLayout>